--- a/src/main/webapp/jsf/auftragsannahme/List.xhtml
+++ b/src/main/webapp/jsf/auftragsannahme/List.xhtml
@@ -31,7 +31,7 @@
                                 <h:outputText value="#{bundle.ListAuftragsannahmeTitle_dat}"/>
                             </f:facet>
                             <h:outputText value="#{item.dat}">
-                                <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
+                                <f:convertDateTime pattern="dd" />
                             </h:outputText>
                         </h:column>
                         <h:column>
@@ -60,18 +60,6 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_job}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.job}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_fahrscheckNr}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.fahrscheckNr}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
                                 <h:outputText value="#{bundle.ListAuftragsannahmeTitle_preis}"/>
                             </f:facet>
                             <h:outputText value="#{item.preis}"/>
@@ -84,54 +72,12 @@
                         </h:column>
                         <h:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_typ}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.typ}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_preisCheck}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.preisCheck}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_fahrscheckCheck}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.fahrscheckCheck}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_sonderkonditionen}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.sonderkonditionen}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_summe}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.summe}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuftragsannahmeTitle_kuerzel}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.kuerzel}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
                                 <h:outputText value="&nbsp;"/>
                             </f:facet>
                             <h:commandLink action="#{auftragsannahmeController.prepareView}" value="#{bundle.ListAuftragsannahmeViewLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{auftragsannahmeController.prepareEdit}" value="#{bundle.ListAuftragsannahmeEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandLink action="#{auftragsannahmeController.destroy}" value="#{bundle.ListAuftragsannahmeDestroyLink}"/>
                         </h:column>
                     </h:dataTable>
                 </h:panelGroup>
-                <br />
-                <h:commandLink action="#{auftragsannahmeController.prepareCreate}" value="#{bundle.ListAuftragsannahmeCreateLink}"/>
                 <br />
                 <br />
                 <h:link outcome="/index" value="#{bundle.ListAuftragsannahmeIndexLink}"/>
