--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
-<h:outputStylesheet name="css/jsfcrud.css"/>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
 
     <h:body>
@@ -16,6 +16,11 @@
         <p>
             <ui:insert name="body">Default Body</ui:insert>
         </p>
+
+        <br />
+        <br />
+        <h:outputText value="#{version.version}"/>
+
     </h:body>
 
 </html>
