Add jsf classes and pages from netbeans wizard run.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,9 +13,11 @@
         <br />
         <h:link outcome="/jsf/rechnungskunden/List" value="${bundle.ViewRechnungskundenShowAllLink}"/>
         <br />
+        <h:link outcome="/jsf/customer/List" value="${bundle.ViewCustomerShowAllLink}"/>
+        <br />
+        <h:link outcome="/jsf/workorder/List" value="${bundle.ViewWorkorderShowAllLink}"/>
+        <br />
         <br />
         <h:outputText value="#{version.version}"/>
     </h:body>
-
 </html>
-
