--- a/src/main/webapp/jsf/workorder/List.xhtml
+++ b/src/main/webapp/jsf/workorder/List.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -56,7 +57,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListWorkorderTitle_fahrernr}"/>
                             </f:facet>
-                            <h:outputText value="#{item.fahrernr}"/>
+                            <h:outputText value="&nbsp;&nbsp;#{item.fahrernr}&nbsp;&nbsp;"  style="#{item.isOpen() ? 'background:#6EFF03' : ''} "/>
                         </h:column>
                         <h:column>
                             <f:facet name="header">
