--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,8 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
@@ -10,16 +13,16 @@
         </ui:define>
         <ui:define name="body">
             <br />
-            <h:button outcome="/jsf/customer/List"
+            <p:button outcome="/jsf/customer/List"
                       value="${bundle.ViewCustomerShowAllLink}"
                       styleClass="indexLink"/>
             <br />
-            <h:button outcome="/jsf/workorder/List"
+            <p:button outcome="/jsf/workorder/List"
                       value="${bundle.ViewWorkorderShowAllLink}"
                       styleClass="indexLink"/>
 
             <br />
-            <h:button outcome="/m/index"
+            <p:button outcome="/m/index"
                       value="${bundle.MobileLink}"
                       styleClass="indexLink"/>
         </ui:define>
