--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -1,8 +1,11 @@
 <?xml version='1.0' encoding='UTF-8' ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
@@ -23,7 +26,7 @@
         <p>
             <h:outputText value="#{loginBean.remoteUser}"/>
             <br />
-            <h:link outcome="/logout" value="logout" rendered="#{loginBean.loggedIn}" />
+            <p:button outcome="/logout" value="log out" rendered="#{loginBean.loggedIn}" />
         </p>
     </h:body>
 
