Add a logout button.

--- a/src/main/webapp/m/index.xhtml
+++ b/src/main/webapp/m/index.xhtml
@@ -21,5 +21,18 @@
                           value="Panels ${bundle.ViewWorkorderShowAllLink}"/>
             </pm:content>
         </pm:view>
+        <pm:view id="settings">
+            <pm:header title="Settings">
+                <f:facet name="left">
+                    <p:button value="Back" icon="back" href="#main"/>
+                </f:facet>
+            </pm:header>
+            <pm:content>
+                <h:outputText value="#{loginBean.remoteUser}"/>
+                <br />
+                <p:button outcome="/logout" value="log out" rendered="#{loginBean.loggedIn}" />
+            </pm:content>
+        </pm:view>
+
     </pm:page>
 </f:view>
