Smaller login panel for easier zooming.

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,7 +12,7 @@
         </ui:define>
         <ui:define name="body">
             <h:form>
-                <p:panel id="panel">
+                <p:panel id="panel" style="display: inline-block;">
                     <f:facet name="header">
                         Log in
                     </f:facet>
