--- a/src/main/webapp/logout.xhtml
+++ b/src/main/webapp/logout.xhtml
@@ -13,7 +13,7 @@
         <ui:define name="body">
             #{loginBean.logout()}
             <h:form>
-                <p:panel id="panel">
+                <p:panel id="panel" style="display: inline-block;">
                     <f:facet name="header">
                         Log in
                     </f:facet>
