Call the jsf item list recreation on list view. Disable all sorts of caching for workorder, too. Add commented out SQL logging properties to persistence.xml.

--- a/src/main/webapp/jsf/workorder/List.xhtml
+++ b/src/main/webapp/jsf/workorder/List.xhtml
@@ -7,6 +7,9 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <ui:composition template="/template.xhtml">
+        <ui:define name="evictCache">
+            #{workorderController.recreateModel()}
+        </ui:define>
         <ui:define name="title">
             <h:outputText value="#{bundle.ListWorkorderTitle}"></h:outputText>
         </ui:define>
