Add forced re-read into other workorder lists, too.

--- a/src/main/webapp/m/workorder/List.xhtml
+++ b/src/main/webapp/m/workorder/List.xhtml
@@ -11,6 +11,7 @@
          renderKitId="PRIMEFACES_MOBILE"
          >
     <pm:page title="Hello World">
+        #{workorderController.recreateModel()}
         <pm:view id="List">
             <pm:header title="#{bundle.ListWorkorderTitle}">
                 <f:facet name="left">
